
Added checks for Myrinet and Ethernet. Minor bug fix.
----------------------------------------------------------------------
Thu May 12 08:12:48 2011                        Michael Jennings (mej)

Try alternate mechanism for IB port checks.
----------------------------------------------------------------------
Wed May 18 15:57:49 2011                        Michael Jennings (mej)

Fix parsing bug.  Due to bash not properly "escaping" expanded
variables inside ${VAR#...} constructs, config file lines must not
contain more than one occurance of "||" any more.

Direct output to /dev/null, then redirect if $LOGFILE is set.
----------------------------------------------------------------------
Tue May 24 15:33:25 2011                        Michael Jennings (mej)

Support older single-core, non-HT CPUs in /proc/cpuinfo.
----------------------------------------------------------------------
Thu Sep  1 16:16:38 2011                        Michael Jennings (mej)

Fixed status reporting and added NHC label to offline message.
----------------------------------------------------------------------
Mon Sep 19 17:13:11 2011                        Michael Jennings (mej)

Bump version to 1.1.

This release adds the ability to detect previously-set notes for nodes
and not overwrite them.

It will also clear notes and online nodes if all checks pass for a
node that had previously had check errors.  It will only do this for
nodes whose notes begin with "NHC" to avoid bringing nodes online
which were manually offlined.  Nodes marked offline which have no note
are not distinguished from down nodes and may be brought online if the
error(s) clear.
----------------------------------------------------------------------
Thu Oct 13 16:04:20 2011                        Michael Jennings (mej)

Output onlining/offlining of nodes to log (with timestamp).

Log failure of health check to logfile as well as syslog.
----------------------------------------------------------------------