@@ -1,0 +1,13 @@
+dnl# $Id$
+
+AC_PREREQ(2.59)
+AC_INIT([warewulf-nhc], [1.1.3], [warewulf-devel@lbl.gov])
+AC_CONFIG_SRCDIR([.])
+
+AC_PROG_INSTALL
+AM_INIT_AUTOMAKE([foreign])
+
+AC_OUTPUT([
+   Makefile
+   warewulf-nhc.spec
+])
