@@ -1,1 +1,0 @@
-srcs: ChangeLog&nhc&nhc.conf&*.spec&scripts&helpers:warewulf-nhc.tar.gz
