@@ -5,13 +5,14 @@
 %{!?nhc_helper_dir:%global nhc_helper_dir %{_libexecdir}/%{sname}}
 
 Summary: Warewulf Node Health Check System
-Name: warewulf-%{sname}
-Version: 1.1.3
-Release: %{_rel}
+Name: @PACKAGE@
+Version: @VERSION@
+#Release: %{_rel}
+Release: 1
 License: BSD
 Group: Applications/System
 URL: http://warewulf.lbl.gov/
-Source: %{name}.tar.gz
+Source: %{name}-%{version}.tar.gz
 Packager: %{?_packager:%{_packager}}%{!?_packager:Michael Jennings <mej@lbl.gov>}
 Vendor: %{?_vendorinfo:%{_vendorinfo}}%{!?_vendorinfo:Warewulf Project (http://warewulf.lbl.gov/)}
 Distribution: %{?_distribution:%{_distribution}}%{!?_distribution:%{_vendor}}
@@ -30,21 +31,23 @@ contained in this package provide a flexible, extensible mechanism for
 collecting health checks to be run on your cluster and specifying
 which checks should be run on which nodes.
 
+
 %prep
-%setup -n %{name} -T -c -a 0
+%setup
+
+
+%build
+%{configure}
+%{__make} %{?mflags}
+
 
 %install
-%{__mkdir_p} $RPM_BUILD_ROOT%{_sbindir} $RPM_BUILD_ROOT%{_sysconfdir}/%{sname}
-%{__mkdir_p} $RPM_BUILD_ROOT%{nhc_script_dir} $RPM_BUILD_ROOT%{nhc_helper_dir}
+%{__make} install DESTDIR=$RPM_BUILD_ROOT %{?mflags_install}
 
-%{__install} -m 0755 nhc $RPM_BUILD_ROOT%{_sbindir}/%{sname}
-#%{__install} -m 0755 nhc-run $RPM_BUILD_ROOT%{_sbindir}/
-%{__install} -m 0644 nhc.conf $RPM_BUILD_ROOT%{_sysconfdir}/%{sname}/%{sname}.conf
-%{__install} -m 0644 scripts/* $RPM_BUILD_ROOT%{nhc_script_dir}/
-%{__install} -m 0755 helpers/* $RPM_BUILD_ROOT%{nhc_helper_dir}/
 
 %clean
 test "$RPM_BUILD_ROOT" != "/" && %{__rm} -rf $RPM_BUILD_ROOT
+
 
 %files
 %defattr(-, root, root)
